# quiz_generator

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  app.py  generator.py  validator.py
app/models/: __init__.py  quiz.py
notebooks/: prototype.ipynb
quiz_generator/: pyproject.toml
quiz_generator/quiz_generator/: __init__.py  app.py  generator.py  gradio_ui.py  validator.py
quiz_generator/quiz_generator/models/: __init__.py
quiz_generator/tests/test_api/: test_routes.py
quiz_generator/tests/test_services/: test_generator.py
tests/test_api/: test_routes.py
tests/test_services/: test_generator.py
