[tool.poetry]
name = "quiz-generator"
version = "0.1.0"
description = "AI-powered educational quiz generator for higher education"
authors = ["casanovaalonso <alejandro.casanova@scopely.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/casanovaalonso/quiz-generator"
packages = [{include = "quiz_generator"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.65.3"
instructor = "^1.7.2"
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-openai = "^0.3.7"
duckduckgo-search = "^7.5.0"
langchain-community = "^0.3.19"
flask = "^2.0.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
gradio = "5.11.0"

# Keep this for notebook development
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.2.2"

[tool.poetry.scripts]
quiz-api = "quiz_generator.app:main"
quiz-ui = "quiz_generator.gradio_ui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I"]