[tool.poetry]
name = "quiz-generator"
version = "0.1.0"
description = ""
authors = ["casanovaalonso <alejandro.casanova@scopely.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.65.3"
instructor = "^1.7.2"
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-openai = "^0.3.7"
duckduckgo-search = "^7.5.0"
langchain-community = "^0.3.19"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
